CB-29110 Datalake HMS DB user/password rotation should update CM of DHs too
- current shared service rotation flow (creating different HMS user for every cluster) is removed: it was troublesome to switch HMS user for operations which requires schema owner for the db, so only DL's HMS DB user can be used for those operations. The most important features affected by this behaviour is provision and runtime upgrade.
- the new rotation logic is to require all DH clusters to be available in order to update them all at the end of HMS DB user/password rotation for Datalake
- the DH update includes pillar update, CM services restart and remote data context update
- rollback is not supported when the rotation on DL side is finished and updating of DH clusters is happening